--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -9,8 +9,10 @@
     "clear": "gatsby clear"
   },
   "dependencies": {
+    "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.24.60",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "theme-ui": "^0.3.1"
   }
 }
