data storage with FaunaDB

--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.2.1",
     "@theme-ui/presets": "^0.3.0",
     "apollo-link-context": "^1.0.20",
+    "faunadb": "^3.0.1",
     "gatsby": "^2.24.60",
     "gatsby-plugin-create-client-paths": "^2.3.11",
     "netlify-identity-widget": "^1.9.1",
