--- a/functions/graphql/package.json
+++ b/functions/graphql/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^2.18.0",
+    "faunadb": "^4.0.0",
     "graphql": "^15.3.0"
   }
 }
